Bug 284879 - Crash before scanning
Summary: Crash before scanning
Status: RESOLVED FIXED
Alias: None
Product: libksane
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Kåre Särs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-24 15:53 UTC by cjcanhoto
Modified: 2011-10-28 18:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cjcanhoto 2011-10-24 15:53:17 UTC
Application: digikam (1.4.0)
KDE Platform Version: 4.5.5 (KDE 4.5.5)
Qt Version: 4.7.0
Operating System: Linux 2.6.35-30-powerpc ppc
Distribution: Ubuntu 10.10

-- Information about the crash:
- What I was doing when the application crashed:
I was connecting to a network scanner. I just had choosen the "import from scanner" option and choosen the scanner from the list of devices.

-- Backtrace:
Application: digiKam (digikam), signal: Segmentation fault
[Current thread is 1 (Thread 0x48051640 (LWP 3679))]

Thread 16 (Thread 0x48a91420 (LWP 3684)):
#0  0x0b6f8aa0 in g_thread_self () from /lib/libglib-2.0.so.0
#1  0x0b6c4828 in g_main_context_acquire () from /lib/libglib-2.0.so.0
#2  0x0b6c6c8c in ?? () from /lib/libglib-2.0.so.0
#3  0x0b6c7764 in g_main_loop_run () from /lib/libglib-2.0.so.0
#4  0x08fc7870 in ?? () from /usr/lib/libgio-2.0.so.0
#5  0x0b6f936c in ?? () from /lib/libglib-2.0.so.0
#6  0x0c7dd890 in start_thread () from /lib/libpthread.so.0
#7  0x0c111fc0 in clone () from /lib/libc.so.6

Thread 15 (Thread 0x4b0cd420 (LWP 3706)):
#0  0x0c7e3590 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x0c88646c in wait (this=0x10e1e5a0, mutex=0x10e1e59c, time=<value optimized out>) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=0x10e1e5a0, mutex=0x10e1e59c, time=<value optimized out>) at thread/qwaitcondition_unix.cpp:160
#3  0x10307ef8 in Digikam::ScanController::run (this=0x10e1f338) at /build/buildd/digikam-1.4.0/digikam/scancontroller.cpp:515
#4  0x0c885580 in QThreadPrivate::start (arg=0x10e1f338) at thread/qthread_unix.cpp:266
#5  0x0c7dd890 in start_thread () from /lib/libpthread.so.0
#6  0x0c111fc0 in clone () from /lib/libc.so.6

Thread 14 (Thread 0x4b8cd420 (LWP 3731)):
#0  0x0c7e1f48 in __pthread_mutex_unlock_usercnt () from /lib/libpthread.so.0
#1  0x0b6c650c in g_main_context_check () from /lib/libglib-2.0.so.0
#2  0x0b6c6ec4 in ?? () from /lib/libglib-2.0.so.0
#3  0x0b6c72e8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#4  0x0c9f2ddc in QEventDispatcherGlib::processEvents (this=0x11049060, flags=) at kernel/qeventdispatcher_glib.cpp:417
#5  0x0c9b756c in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#6  0x0c9b7b48 in QEventLoop::exec (this=0x4b8ccc80, flags=) at kernel/qeventloop.cpp:201
#7  0x0c8812f0 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#8  0x0e9ab584 in Digikam::ImageFilterModelWorker::Thread::run (this=<value optimized out>) at /build/buildd/digikam-1.4.0/obj-powerpc-linux-gnu/digikam/../../libs/models/imagefiltermodelthreads.h:66
#9  0x0c885580 in QThreadPrivate::start (arg=0x10ee3a28) at thread/qthread_unix.cpp:266
#10 0x0c7dd890 in start_thread () from /lib/libpthread.so.0
#11 0x0c111fc0 in clone () from /lib/libc.so.6

Thread 13 (Thread 0x4ddff420 (LWP 3732)):
#0  0x0c9f5938 in QTimerInfoList::updateCurrentTime (this=0x10d69fbc) at kernel/qeventdispatcher_unix.cpp:338
#1  0x0c9f59d4 in QTimerInfoList::timerWait (this=0x10d69fbc, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#2  0x0c9f3114 in timerSourcePrepareHelper (src=<value optimized out>, timeout=0x4ddfeaec) at kernel/qeventdispatcher_glib.cpp:136
#3  0x0c9f3224 in timerSourcePrepare (source=<value optimized out>, timeout=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#4  0x0b6c68b4 in g_main_context_prepare () from /lib/libglib-2.0.so.0
#5  0x0b6c6d4c in ?? () from /lib/libglib-2.0.so.0
#6  0x0b6c72e8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#7  0x0c9f2ddc in QEventDispatcherGlib::processEvents (this=0x10f72b30, flags=) at kernel/qeventdispatcher_glib.cpp:417
#8  0x0c9b756c in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#9  0x0c9b7b48 in QEventLoop::exec (this=0x4ddfec80, flags=) at kernel/qeventloop.cpp:201
#10 0x0c8812f0 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#11 0x0e9ab584 in Digikam::ImageFilterModelWorker::Thread::run (this=<value optimized out>) at /build/buildd/digikam-1.4.0/obj-powerpc-linux-gnu/digikam/../../libs/models/imagefiltermodelthreads.h:66
#12 0x0c885580 in QThreadPrivate::start (arg=0x10f602f0) at thread/qthread_unix.cpp:266
#13 0x0c7dd890 in start_thread () from /lib/libpthread.so.0
#14 0x0c111fc0 in clone () from /lib/libc.so.6

Thread 12 (Thread 0x4e680420 (LWP 3733)):
#0  0x0c7e3590 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x0c88646c in wait (this=0x10f6feb0, mutex=0x10f6feac, time=<value optimized out>) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=0x10f6feb0, mutex=0x10f6feac, time=<value optimized out>) at thread/qwaitcondition_unix.cpp:160
#3  0x0ece8930 in Digikam::ParkingThread::run (this=0x10f6fea0) at /build/buildd/digikam-1.4.0/libs/threads/threadmanager.cpp:101
#4  0x0c885580 in QThreadPrivate::start (arg=0x10f6fea0) at thread/qthread_unix.cpp:266
#5  0x0c7dd890 in start_thread () from /lib/libpthread.so.0
#6  0x0c111fc0 in clone () from /lib/libc.so.6

Thread 11 (Thread 0x4ee80420 (LWP 3734)):
#0  0x0c7e1f68 in __pthread_mutex_unlock_usercnt () from /lib/libpthread.so.0
#1  0x0b6c650c in g_main_context_check () from /lib/libglib-2.0.so.0
#2  0x0b6c6ec4 in ?? () from /lib/libglib-2.0.so.0
#3  0x0b6c72e8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#4  0x0c9f2ddc in QEventDispatcherGlib::processEvents (this=0x10f42678, flags=) at kernel/qeventdispatcher_glib.cpp:417
#5  0x0c9b756c in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#6  0x0c9b7b48 in QEventLoop::exec (this=0x4ee7fc90, flags=) at kernel/qeventloop.cpp:201
#7  0x0c8812f0 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#8  0x102feb90 in Digikam::MetadataManagerWorker::Thread::run (this=<value optimized out>) at /build/buildd/digikam-1.4.0/obj-powerpc-linux-gnu/digikam/../../digikam/metadatamanager_p.h:160
#9  0x0c885580 in QThreadPrivate::start (arg=0x10f71768) at thread/qthread_unix.cpp:266
#10 0x0c7dd890 in start_thread () from /lib/libpthread.so.0
#11 0x0c111fc0 in clone () from /lib/libc.so.6

Thread 10 (Thread 0x4f680420 (LWP 3735)):
#0  0x0c7e1f08 in __pthread_mutex_unlock_usercnt () from /lib/libpthread.so.0
#1  0x0b6c48b0 in g_main_context_acquire () from /lib/libglib-2.0.so.0
#2  0x0b6c6c8c in ?? () from /lib/libglib-2.0.so.0
#3  0x0b6c72e8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#4  0x0c9f2ddc in QEventDispatcherGlib::processEvents (this=0x10f5e088, flags=) at kernel/qeventdispatcher_glib.cpp:417
#5  0x0c9b756c in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#6  0x0c9b7b48 in QEventLoop::exec (this=0x4f67fc90, flags=) at kernel/qeventloop.cpp:201
#7  0x0c8812f0 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#8  0x102feb90 in Digikam::MetadataManagerWorker::Thread::run (this=<value optimized out>) at /build/buildd/digikam-1.4.0/obj-powerpc-linux-gnu/digikam/../../digikam/metadatamanager_p.h:160
#9  0x0c885580 in QThreadPrivate::start (arg=0x1108eea0) at thread/qthread_unix.cpp:266
#10 0x0c7dd890 in start_thread () from /lib/libpthread.so.0
#11 0x0c111fc0 in clone () from /lib/libc.so.6

Thread 9 (Thread 0x5651b420 (LWP 4146)):
#0  0x0c7e3b9c in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x073445c8 in ?? () from /usr/lib/libxine.so.1
#2  0x0c7dd890 in start_thread () from /lib/libpthread.so.0
#3  0x0c111fc0 in clone () from /lib/libc.so.6

Thread 8 (Thread 0x57126420 (LWP 4163)):
#0  0x0c1096f8 in select () from /lib/libc.so.6
#1  0x07375a40 in xine_usec_sleep () from /usr/lib/libxine.so.1
#2  0x07355af0 in ?? () from /usr/lib/libxine.so.1
#3  0x0c7dd890 in start_thread () from /lib/libpthread.so.0
#4  0x0c111fc0 in clone () from /lib/libc.so.6

Thread 7 (Thread 0x57926420 (LWP 4164)):
#0  0x0b6c669c in g_main_context_prepare () from /lib/libglib-2.0.so.0
#1  0x0b6c6d4c in ?? () from /lib/libglib-2.0.so.0
#2  0x0b6c72e8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x0c9f2ddc in QEventDispatcherGlib::processEvents (this=0x115a40e0, flags=) at kernel/qeventdispatcher_glib.cpp:417
#4  0x0c9b756c in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#5  0x0c9b7b48 in QEventLoop::exec (this=0x57925c50, flags=) at kernel/qeventloop.cpp:201
#6  0x0c8812f0 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#7  0x073c2c84 in ?? () from /usr/lib/qt4/plugins/phonon_backend/phonon_xine.so
#8  0x0c885580 in QThreadPrivate::start (arg=0x115a3ca8) at thread/qthread_unix.cpp:266
#9  0x0c7dd890 in start_thread () from /lib/libpthread.so.0
#10 0x0c111fc0 in clone () from /lib/libc.so.6

Thread 6 (Thread 0x58126420 (LWP 4166)):
#0  0x0c7e0240 in __pthread_mutex_lock_full () from /lib/libpthread.so.0
#1  0x0989805c in pa_mutex_lock () from /usr/lib/libpulsecommon-0.9.21.so
#2  0x0bffdfc0 in ?? () from /usr/lib/libpulse.so.0
#3  0x0bfeb9f0 in pa_mainloop_poll () from /usr/lib/libpulse.so.0
#4  0x0bfed898 in pa_mainloop_iterate () from /usr/lib/libpulse.so.0
#5  0x0bfed990 in pa_mainloop_run () from /usr/lib/libpulse.so.0
#6  0x0bffdd5c in ?? () from /usr/lib/libpulse.so.0
#7  0x09899044 in ?? () from /usr/lib/libpulsecommon-0.9.21.so
#8  0x0c7dd890 in start_thread () from /lib/libpthread.so.0
#9  0x0c111fc0 in clone () from /lib/libc.so.6

Thread 5 (Thread 0x5c927420 (LWP 4172)):
#0  0x0c7e3590 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x073597d4 in ?? () from /usr/lib/libxine.so.1
#2  0x0c7dd890 in start_thread () from /lib/libpthread.so.0
#3  0x0c111fc0 in clone () from /lib/libc.so.6

Thread 4 (Thread 0x5d127420 (LWP 4223)):
#0  0x0c7e4c9c in pthread_getspecific () from /lib/libpthread.so.0
#1  0x09979194 in ?? () from /usr/lib/libgthread-2.0.so.0
#2  0x0b6f8ab8 in g_thread_self () from /lib/libglib-2.0.so.0
#3  0x0b6c72d4 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#4  0x0c9f2ddc in QEventDispatcherGlib::processEvents (this=0x117ad8b8, flags=) at kernel/qeventdispatcher_glib.cpp:417
#5  0x0c9b756c in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#6  0x0c9b7b48 in QEventLoop::exec (this=0x5d126c60, flags=) at kernel/qeventloop.cpp:201
#7  0x0c8812f0 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#8  0x0c9906d4 in QInotifyFileSystemWatcherEngine::run (this=0x117a8cb8) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x0c885580 in QThreadPrivate::start (arg=0x117a8cb8) at thread/qthread_unix.cpp:266
#10 0x0c7dd890 in start_thread () from /lib/libpthread.so.0
#11 0x0c111fc0 in clone () from /lib/libc.so.6

Thread 3 (Thread 0x60197420 (LWP 4251)):
#0  0x0c7e1f64 in __pthread_mutex_unlock_usercnt () from /lib/libpthread.so.0
#1  0x0b6c48b0 in g_main_context_acquire () from /lib/libglib-2.0.so.0
#2  0x0b6c6c8c in ?? () from /lib/libglib-2.0.so.0
#3  0x0b6c72e8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#4  0x0c9f2ddc in QEventDispatcherGlib::processEvents (this=0x11abcd90, flags=) at kernel/qeventdispatcher_glib.cpp:417
#5  0x0c9b756c in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#6  0x0c9b7b48 in QEventLoop::exec (this=0x60196c60, flags=) at kernel/qeventloop.cpp:201
#7  0x0c8812f0 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#8  0x0c9906d4 in QInotifyFileSystemWatcherEngine::run (this=0x11aba1f8) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x0c885580 in QThreadPrivate::start (arg=0x11aba1f8) at thread/qthread_unix.cpp:266
#10 0x0c7dd890 in start_thread () from /lib/libpthread.so.0
#11 0x0c111fc0 in clone () from /lib/libc.so.6

Thread 2 (Thread 0x5e997420 (LWP 4385)):
#0  0x0c122258 in ?? () from /lib/libc.so.6
#1  0x0c1011a4 in poll () from /lib/libc.so.6
#2  0x07ec9f80 in ?? () from /usr/lib/libavahi-common.so.3
#3  0x07ec8510 in avahi_simple_poll_run () from /usr/lib/libavahi-common.so.3
#4  0x07ec8ed8 in avahi_simple_poll_iterate () from /usr/lib/libavahi-common.so.3
#5  0x07ec8f3c in avahi_simple_poll_loop () from /usr/lib/libavahi-common.so.3
#6  0x07ec9d3c in ?? () from /usr/lib/libavahi-common.so.3
#7  0x0c7dd890 in start_thread () from /lib/libpthread.so.0
#8  0x0c111fc0 in clone () from /lib/libc.so.6

Thread 1 (Thread 0x48051640 (LWP 3679)):
[KCrash Handler]
#6  parentWidget (this=<value optimized out>, w=0x11bb55b8) at ../../include/QtGui/../../src/gui/kernel/qwidget.h:1022
#7  QLayout::addChildWidget (this=<value optimized out>, w=0x11bb55b8) at kernel/qlayout.cpp:992
#8  0x0d03f3e0 in QBoxLayout::insertWidget (this=<value optimized out>, index=-1, widget=0x11bb55b8, stretch=0, alignment=) at kernel/qboxlayout.cpp:1032
#9  0x0d03f69c in QBoxLayout::addWidget (this=<value optimized out>, widget=<value optimized out>, stretch=<value optimized out>, alignment=<value optimized out>) at kernel/qboxlayout.cpp:1112
#10 0x05e90804 in KSaneIface::KSaneWidgetPrivate::createOptInterface (this=0x13ef42d8) at ../../../../libs/libksane/libksane/ksane_widget_private.cpp:214
#11 0x05e89868 in KSaneIface::KSaneWidget::openDevice (this=0x127b2bf8, device_name=<value optimized out>) at ../../../../libs/libksane/libksane/ksane_widget.cpp:430
#12 0x05ecd790 in ?? () from /usr/lib/kde4/kipiplugin_acquireimages.so
#13 0x05ecda34 in ?? () from /usr/lib/kde4/kipiplugin_acquireimages.so
#14 0x0c9c0820 in QMetaObject::metacall (object=) at kernel/qmetaobject.cpp:237
#15 0x0c9d8380 in QMetaObject::activate (sender=0x13fc6bd0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=<value optimized out>) at kernel/qobject.cpp:3280
#16 0x0d01f4c4 in QAction::triggered (this=<value optimized out>, _t1=false) at .moc/release-shared/moc_qaction.cpp:264
#17 0x0d021248 in QAction::activate (this=0x13fc6bd0, event=<value optimized out>) at kernel/qaction.cpp:1256
#18 0x0d53639c in QMenuPrivate::activateCausedStack (this=0x1276a530, causedStack=..., action=0x13fc6bd0, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:993
#19 0x0d53c78c in QMenuPrivate::activateAction (this=0x1276a530, action=0x13fc6bd0, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1085
#20 0x0d53d40c in QMenu::mouseReleaseEvent (this=<value optimized out>, e=0xbfb3bee0) at widgets/qmenu.cpp:2301
#21 0x0de138b0 in KMenu::mouseReleaseEvent (this=0x11b69b78, e=<value optimized out>) at ../../kdeui/widgets/kmenu.cpp:471
#22 0x0d09a778 in QWidget::event (this=0x11b69b78, event=0xbfb3bee0) at kernel/qwidget.cpp:8187
#23 0x0d53ec6c in QMenu::event (this=0x11b69b78, e=0xbfb3bee0) at widgets/qmenu.cpp:2410
#24 0x0d029678 in QApplicationPrivate::notify_helper (this=<value optimized out>, receiver=0x11b69b78, e=0xbfb3bee0) at kernel/qapplication.cpp:4396
#25 0x0d031258 in QApplication::notify (this=0xbfb3c77c, receiver=0x11b69b78, e=0xbfb3bee0) at kernel/qapplication.cpp:3959
#26 0x0dcf608c in KApplication::notify (this=0xbfb3c77c, receiver=0x11b69b78, event=0xbfb3bee0) at ../../kdeui/kernel/kapplication.cpp:310
#27 0x0c9b9320 in QCoreApplication::notifyInternal (this=0xbfb3c77c, receiver=<value optimized out>, event=0xbfb3bee0) at kernel/qcoreapplication.cpp:732
#28 0x0d02f2b8 in sendEvent (receiver=0x11b69b78, event=0xbfb3bee0, alienWidget=0x0, nativeWidget=0x11b69b78, buttonDown=0xdad0e9c, lastMouseReceiver=..., spontaneous=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#29 QApplicationPrivate::sendMouseEvent (receiver=0x11b69b78, event=0xbfb3bee0, alienWidget=0x0, nativeWidget=0x11b69b78, buttonDown=0xdad0e9c, lastMouseReceiver=..., spontaneous=<value optimized out>) at kernel/qapplication.cpp:3058
#30 0x0d0d2e50 in QETWidget::translateMouseEvent (this=0x11b69b78, event=<value optimized out>) at kernel/qapplication_x11.cpp:4337
#31 0x0d0d14b8 in QApplication::x11ProcessEvent (this=0xbfb3c77c, event=0xbfb3c3dc) at kernel/qapplication_x11.cpp:3536
#32 0x0d10241c in x11EventSourceDispatch (s=0x10c729a8, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#33 0x0b6c2230 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#34 0x0b6c7148 in ?? () from /lib/libglib-2.0.so.0
#35 0x0b6c72e8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#36 0x0c9f2d58 in QEventDispatcherGlib::processEvents (this=0x10c6f898, flags=) at kernel/qeventdispatcher_glib.cpp:415
#37 0x0d101b20 in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#38 0x0c9b756c in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#39 0x0c9b7b48 in QEventLoop::exec (this=0xbfb3c684, flags=) at kernel/qeventloop.cpp:201
#40 0x0c9bd364 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#41 0x0d027f80 in QApplication::exec () at kernel/qapplication.cpp:3672
#42 0x103a65f4 in main (argc=<value optimized out>, argv=<value optimized out>) at /build/buildd/digikam-1.4.0/digikam/main.cpp:195

Reported using DrKonqi
Comment 1 Marcel Wiesweg 2011-10-25 20:18:58 UTC
Crash happens in libksane. Can you give us your version of this library? Updating digikam + libs to a recent version may be advisable.
Comment 2 Kåre Särs 2011-10-26 08:09:26 UTC
Hi,

Thanks for the report. What scanner do you have and what backend?

Unfortunately I do not think there will be any updates for KDE 4.5 as there will not be releases for it. I will add a fix for 4.7 and 4.8.

There has to be something starange with the backend tho. It would be interesting to know more about it.
Comment 3 Kåre Särs 2011-10-28 18:41:08 UTC
Git commit 58f13fc37f5a7ef47cbe6ba3d72cc2d52cc4f76a by Kåre Särs.
Committed on 28/10/2011 at 20:29.
Pushed by sars into branch 'master'.

Ensure that createWidget() always creates a widget, even in buggy situations.

BUG:284879

Unfortunately I can not test that this 100% fixes it as I don't have a scanner
with a backend that behaves like this. It seems like option does not exist any
more after the initial checking of the option list...

Please reopen if it does not work with the next release (4.8)

M  +5    -1    libksane/options/ksane_opt_button.cpp
M  +5    -1    libksane/options/ksane_opt_checkbox.cpp
M  +5    -1    libksane/options/ksane_opt_entry.cpp
M  +5    -1    libksane/options/ksane_opt_gamma.cpp

http://commits.kde.org/libksane/58f13fc37f5a7ef47cbe6ba3d72cc2d52cc4f76a
Comment 4 Kåre Särs 2011-10-28 18:47:25 UTC
Git commit f66fe62f2e367d469b868420616817b6178ee776 by Kåre Särs.
Committed on 28/10/2011 at 20:29.
Pushed by sars into branch 'KDE/4.7'.

Ensure that createWidget() always creates a widget, even in buggy situations.

BUG:284879

Unfortunately I can not test that this 100% fixes it as I don't have a scanner
with a backend that behaves like this. It seems like option does not exist any
more after the initial checking of the option list...

Please reopen if it does not work with the next release (4.8)

M  +5    -1    libksane/options/ksane_opt_button.cpp
M  +5    -1    libksane/options/ksane_opt_checkbox.cpp
M  +5    -1    libksane/options/ksane_opt_entry.cpp
M  +5    -1    libksane/options/ksane_opt_gamma.cpp

http://commits.kde.org/libksane/f66fe62f2e367d469b868420616817b6178ee776