Ensure that createWidget() always creates a widget, even in buggy situations.

BUG:284879

Unfortunately I can not test that this 100% fixes it as I don't have a scanner
with a backend that behaves like this. It seems like option does not exist any
more after the initial checking of the option list...

Please reopen if it does not work with the next release (4.8)