libksane/options/ksane_opt_button.cpp
@@ -48,7 +48,11 @@ void KSaneOptButton::createWidget(QWidget *parent)
 
     readOption();
 
-    if (!m_optDesc) return;
+    if (!m_optDesc) {
+        kDebug() << "This is a bug";
+        m_widget = new KSaneOptionWidget(parent, "");
+        return;
+    }
 
     m_widget = m_button = new KSaneButton(parent, i18n(m_optDesc->title));
     m_widget->setToolTip(i18n(m_optDesc->desc));
