libksane/options/ksane_opt_entry.cpp
@@ -51,7 +51,11 @@ void KSaneOptEntry::createWidget(QWidget *parent)
 
     readOption();
 
-    if (!m_optDesc) return;
+    if (!m_optDesc) {
+        kDebug() << "This is a bug";
+        m_widget = new KSaneOptionWidget(parent, "");
+        return;
+    }
 
     m_widget = m_entry = new LabeledEntry(parent, i18n(m_optDesc->title));
     m_widget->setToolTip(i18n(m_optDesc->desc));
